--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/d3a3ae5000.js" crossorigin="anonymous"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
@@ -27,7 +29,7 @@
                     <h1>Conmebol</h1>
                     <h1>Copa America</h1>
                     <h1>2021</h1>
-                    <span>watch live</span>
+                    <span class="live">Watch Live <i class="fas fa-arrow-circle-right"></i></i></span>
 
                 </div>
                 <div class="player-box">
