--- a/index.html
+++ b/index.html
@@ -32,13 +32,108 @@
                     <span class="live">Watch Live <i class="fas fa-arrow-circle-right"></i></i></span>
 
                 </div>
-                <div class="player-box">
+                <div class="player-box"><span class="login">Login<i class="fas fa-sign-in-alt"></i></span>
                     <img src="images/banner.png" alt="">
                 </div>
             </div>
 
         </section>
         <!-- --$-end-top-section-$-- -->
+        <!-- ........start middlle section..... -->
+        <section class="flex-grid">
+            <div class="player-box">
+                <div class="player-profile">
+                    <img src="images/players/player-1.png" alt="">
+                </div>
+                <div class="player-info">
+                    <h1>Neymar</h1>
+
+                </div>
+            </div>
+            <div class="player-box">
+                <div class="player-profile">
+                    <img src="images/players/player-2.png" alt="">
+
+                </div>
+                <div class="player-info">
+                    <h1>Leonel Messy</h1>
+
+                </div>
+            </div>
+            <div class="player-box">
+                <div class="player-profile">
+                    <img src="images/players/player-3.png" alt="">
+
+                </div>
+                <div class="player-info">
+                    <h1>Ronaldo</h1>
+
+                </div>
+            </div>
+            <div class="player-box">
+                <div class="player-profile">
+                    <img src="images/players/player-4.png" alt="">
+
+
+                </div>
+                <div class="player-info">
+                    <h1>Paulo Daybala</h1>
+
+                </div>
+            </div>
+            <div class="player-box">
+                <div class="player-profile">
+                    <img src="images/players/player-5.png" alt="">
+
+                </div>
+                <div class="player-info">
+                    Mesut Ozil
+
+                </div>
+            </div>
+            <div class="player-box">
+                <div class="player-profile">
+                    <img src="images/players/player-6.png" alt="">
+
+                </div>
+                <div class="player-info">
+                    <h1>De Maria</h1>
+
+                </div>
+            </div>
+            <div class="player-box">
+                <div class="player-profile">
+                    <img src="images/players/player-7.png" alt="">
+
+                </div>
+                <div class="player-info">
+                    <h1>Kylian Mobappe
+                    </h1>
+                </div>
+            </div>
+            <div class="player-box">
+                <div class="player-profile">
+                    <img src="images/players/player-8.png" alt="">
+
+                </div>
+                <div class="player-info">
+                    <h1>Harry Kane</h1>
+
+                </div>
+            </div>
+            <div class="player-box">
+                <div class="player-profile">
+                    <img src="images/players/player-9.png" alt="">
+
+                </div>
+                <div class="player-info">
+                    <h1>Mohammed salah</h1>
+
+                </div>
+            </div>
+
+        </section>
+        <!-- .....end middle section..... -->
     </main>
 
 </body>
