--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- --$-end-top-section-$-- -->
         <!-- ........start middlle section..... -->
         <section class="flex-grid">
-            <div class="player-box">
+            <div class="player-b">
                 <div class="player-profile">
                     <img src="images/players/player-1.png" alt="">
                 </div>
@@ -53,7 +53,7 @@
 
                 </div>
             </div>
-            <div class="player-box">
+            <div class="player-b">
                 <div class="player-profile">
                     <img src="images/players/player-2.png" alt="">
 
@@ -67,7 +67,7 @@
 
                 </div>
             </div>
-            <div class="player-box">
+            <div class="player-b">
                 <div class="player-profile">
                     <img src="images/players/player-3.png" alt="">
 
@@ -81,7 +81,7 @@
 
                 </div>
             </div>
-            <div class="player-box">
+            <div class="player-b">
                 <div class="player-profile">
                     <img src="images/players/player-4.png" alt="">
 
@@ -96,7 +96,7 @@
 
                 </div>
             </div>
-            <div class="player-box">
+            <div class="player-b">
                 <div class="player-profile">
                     <img src="images/players/player-5.png" alt="">
 
@@ -110,7 +110,7 @@
 
                 </div>
             </div>
-            <div class="player-box">
+            <div class="player-b">
                 <div class="player-profile">
                     <img src="images/players/player-6.png" alt="">
 
@@ -124,7 +124,7 @@
 
                 </div>
             </div>
-            <div class="player-box">
+            <div class="player-b">
                 <div class="player-profile">
                     <img src="images/players/player-7.png" alt="">
 
@@ -137,7 +137,7 @@
                         There are two groups. Each group has eleven players. Each group has a goalkeeper. </p>
                 </div>
             </div>
-            <div class="player-box">
+            <div class="player-b">
                 <div class="player-profile">
                     <img src="images/players/player-8.png" alt="">
 
@@ -151,7 +151,7 @@
 
                 </div>
             </div>
-            <div class="player-box">
+            <div class="player-b">
                 <div class="player-profile">
                     <img src="images/players/player-9.png" alt="">
 
